fix align of powered by on theme default
fix align of powered by on theme default

--- a/themes/default/client/src/css/01-main.css
+++ b/themes/default/client/src/css/01-main.css
@@ -15,6 +15,7 @@ body {
 .poweredby {
   font-size: 0.7em;
   color: #6b6b6b;
+  text-align: center;
 }
 /* notifications */
 .notification {
